# artifact

./: .gitignore  pyproject.toml
edge_ids/: config_loader.py  dataset.py
microshield-server/: pyproject.toml
microshield-server/tests/: test_download.py
tests/: test_config.yaml  test_config_loader.py
