[project]
name = "artifact"
version = "0.1.0"
description = ""
authors = [
    {name = "Wearemassive78",email = "massimiliano.pupillo@studio.unibo.it"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
